# nanomaterials-2025

./: Makefile  README.md  pyproject.toml
data/clean/: data.xlsx  data_mineral_all.xlsx  data_unwrap.xlsx
data/docs/: domain.xlsx  family.xlsx  full.xlsx  mineral_all.xlsx  phylum.xlsx  species.xlsx
data/prepare/: README.md  class.xlsx  data.xlsx  data_structed.xlsx  order.xlsx
data/raw/: data.xlsx  Минералка.xlsx
docs/: report.docx  ~$report.docx
src/notebooks/: data_analysis.ipynb  data_diversity.ipynb  data_explore.ipynb  data_micro_analysis.ipynb  data_mineral_analysis.ipynb  data_toxic_analysis.ipynb
src/scripts/: data_clean.py  docs_full_create.py
