[tool.poetry]
name = "nanomaterials-grant-2025"
version = "0.1.0"
description = ""
authors = ["leroy <leroy137.artur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
dvc = {extras = ["s3"], version = "^3.59.1"}
openpyxl = "^3.1.5"
data = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
